hphp/hack/test/typecheck/pipe_operator_precedence_wrong_type.php.exp
File "pipe_operator_precedence_wrong_type.php", line 16, characters 42-43:
Invalid argument (Typing[4110])
File "pipe_operator_precedence_wrong_type.php", line 11, characters 17-22:
Expected string
File "pipe_operator_precedence_wrong_type.php", line 16, characters 19-30:
But got int because this is the result of an integer arithmetic operation
